--- a/.github/terraform.yml
+++ b/.github/terraform.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./infra
+        working-directory: ./
         shell: bash
     permissions:
       id-token: write
