--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,7 +23,8 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v1
         
         with:
-          role-to-assume: arn:aws:iam::590183718917:role/github
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
           
       - name: Checkout
@@ -72,31 +73,13 @@ jobs:
             </details>
 
             *Pushed by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
-
-
     
       - name: Terraform Plan Status
         if: steps.plan.outcome == 'failure'
         run: exit 1
         
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/main' && github.event_name == 'pull_request'
+        if: github.ref == 'refs/heads/main'
         run: terraform apply -auto-approve -input=true 
         working-directory: ${{ env.working-directory }}
         
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-          
