--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -26,7 +26,7 @@ jobs:
 
         # build command should be set in your package.json scripts as: "build": "tsc"
       - name: Build
-        run: npm run build
+        run: cd app && npm run build
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
