--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -12,17 +12,17 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Dependencies
-        run: yarn
+        run: cd app && yarn
 
         # build command should be set in your package.json scripts as: "build": "tsc"
       - name: Build
-        run: yarn build
+        run: cd app && yarn build
 
       - name: Move node_modules to dist
-        run: mv node_modules dist/node_modules
+        run: cd app && mv node_modules dist/node_modules
 
       - name: Zip
-        run: (cd dist && zip -r ../function.zip .)
+        run: (cd app/dist && zip -r ../function.zip .)
 
       - name: Deploy to AWS
         uses: appleboy/lambda-action@master
