--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -25,7 +25,7 @@ jobs:
         run: (cd app/dist && zip -r ../function.zip .)
 
       - name: Deploy to AWS
-        uses: appleboy/lambda-action@master
+        uses: cd app && appleboy/lambda-action@master
         with:
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
