--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,34 +1,98 @@
-name: Deploy
+name: Build and terraform
 
 on:
   push:
-    branches: [ main ]
-
+    branches:
+      - main
+  pull_request:
+  
 jobs:
-  deploy:
+  terraform:
+    name: 'Terraform'
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./
+        shell: bash
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
 
       - name: Install Dependencies
-        run: cd app && yarn
+        run: cd app && npm i
 
         # build command should be set in your package.json scripts as: "build": "tsc"
       - name: Build
-        run: cd app && yarn build
-
-      - name: Move node_modules to dist
-        run: cd app && mv node_modules dist/node_modules
+        run: cd app && npm run build
 
       - name: Zip
-        run: (cd app/dist && zip -r ../function.zip .)
+        run: (cd app/dist && zip -r ../../lbd-authorizer.zip .)
 
-      - name: Deploy to AWS
-        uses: appleboy/lambda-action@master
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        
         with:
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_region: ${{ secrets.AWS_REGION }}
-          function_name: lbd-authorizer
-          zip_file: function.zip
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+          
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+
+      - name: Terraform Init
+        id: init
+        run: terraform init
+
+      # - name: Terraform Format
+      #   id: fmt
+      #   run: terraform fmt -check
+        
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate -no-color
+      
+      - name: Terraform Plan
+        id: plan
+        if: github.event_name == 'pull_request'
+        run: terraform plan -no-color -input=false
+        continue-on-error: true
+        
+      - name: Update Pull Request
+        uses: actions/github-script@v3
+        if: github.event_name == 'pull_request'
+        env:
+          PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
+            #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
+            #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
+            #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
+
+            <details><summary>Show Plan</summary>
+
+            \`\`\`\n
+            ${process.env.PLAN}
+            \`\`\`
+
+            </details>
+
+            *Pushed by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
+    
+      - name: Terraform Plan Status
+        if: steps.plan.outcome == 'failure'
+        run: exit 1
+        
+      - name: Terraform Apply
+        if: github.ref == 'refs/heads/main'
+        run: terraform apply -auto-approve -input=true 
+        working-directory: ${{ env.working-directory }}
+        
+      
