--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -29,7 +29,7 @@ jobs:
         run: cd app && npm run build
 
       - name: Zip
-        run: (cd app/dist && zip -r ../../lbd-authorizer.zip .)
+        run: (cd app/dist && zip -r ../../function.zip .)
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
