--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -29,7 +29,7 @@ jobs:
         run: cd app && npm run build
 
       - name: Check
-        run: ls
+        run: cd app && ls
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
