fix: ajuste policy de acesso ao recurso

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ package-lock.json
 infra/archive_files/function.zip
 app/dist/index.js.LICENSE.txt
 app/dist/index.js
+app/index.js
+app/lambda.zip
