--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,14 +1,17 @@
 {
   "compilerOptions": {
-    "target": "es5",                          
-    "module": "commonjs",                    
-    "lib": ["es6"],                     
+    "target": "es5",
+    "module": "commonjs",
+    "lib": ["es6"],
     "allowJs": true,
-    "outDir": "dist",                          
+    "outDir": "dist",
     "rootDir": "src",
-    "strict": true,         
-    "noImplicitAny": true,
+    "strict": true,
     "esModuleInterop": true,
+    "types": ["node"],
+    "skipLibCheck": true,
+    "noImplicitAny": true,
     "resolveJsonModule": true
-  }
+  },
+  "include": ["src/**/*"]
 }
