--- a/app/package.json
+++ b/app/package.json
@@ -6,18 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx nodemon",
-    "build": "npx tsc"
+    "build": "node esbuild.config.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ViniAlvesMartins/tech-challenge-fiap-lambda-auth.git"
-  },
+
   "author": "Icaro Noventa",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ViniAlvesMartins/tech-challenge-fiap-lambda-auth/issues"
-  },
-  "homepage": "https://github.com/ViniAlvesMartins/tech-challenge-fiap-lambda-auth#readme",
+
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.6",
     "aws-jwt-verify": "^4.0.1",
@@ -26,6 +20,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.25",
+    "esbuild": "^0.20.2",
+    "esbuild-plugin-tsc": "^0.4.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
