--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,17 +1,20 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES2017",
     "module": "commonjs",
     "lib": ["es6"],
     "allowJs": true,
-    "outDir": "dist",
+    "outDir": "./dist",
     "rootDir": "src",
     "strict": true,
-    "esModuleInterop": true,
-    "types": ["node"],
-    "skipLibCheck": true,
     "noImplicitAny": true,
-    "resolveJsonModule": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "experimentalDecorators": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "sourceMap": true,
+    "types": ["node"],
+    "strictPropertyInitialization": false
   },
-  "include": ["src/**/*"]
 }
